Fix GMCP label alignment and border

--- a/sandbox/src/index.css
+++ b/sandbox/src/index.css
@@ -75,23 +75,31 @@ iframe {
 
 /* GMCP type labels in a left column */
 #main_text_output_msg_wrapper.show-gmcp-column .gmcp-msg {
-    display: flex;
-    align-items: stretch;
-    padding-left: 0;
+    padding-left: 92px;
 }
 
 #main_text_output_msg_wrapper.show-gmcp-column .gmcp-msg::before {
     content: attr(data-gmcp-type);
-    color: #aaa;
-    font-size: 10px;
-    padding-right: 6px;
-    min-width: 80px;
-    text-align: right;
-    margin-right: 6px;
-    border-right: 1px solid #444;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 80px;
+    height: 1.2em;
     display: flex;
     align-items: center;
-    height: 100%;
+    justify-content: flex-end;
+    padding-right: 6px;
+    font-size: 10px;
+    color: #aaa;
+}
+
+#main_text_output_msg_wrapper.show-gmcp-column .gmcp-msg::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 86px;
+    border-right: 1px solid #444;
 }
 
 
